--- a/cm-core/src/main/resources/rules/Grade_Price.properties
+++ b/cm-core/src/main/resources/rules/Grade_Price.properties
@@ -1,6 +1,6 @@
 # Association between coin's grade and price multiply coefficient
-Good=1.1
-VeryGood=1.2
-Fine=1.5
-VeryFine=1.65
-ExtraFine=2.5
+GOOD=1.1
+VERY_GOOD=1.2
+FINE=1.5
+VERY_FINE=1.65
+EXTRA_FINE=2.5
