--- a/cm-core/src/main/resources/log4j.properties
+++ b/cm-core/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Root logger option
 log4j.rootLogger=DEBUG, stdout, all
-log4j.logger.com.cm=DEBUG, cm_log, error
+log4j.logger.com.cm=INFO, cm_log, error
 
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
