--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,6 @@
             <scope>test</scope>
         </dependency>
 
-
     </dependencies>
 
     <repositories>
@@ -167,6 +166,20 @@
             <url>https://code.lds.org/nexus/content/groups/main-repo</url>
         </repository>
     </repositories>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
